--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://yourgithubName.github.io/repoName",
+  "homepage": "http://wardahmad.github.io/tic-tac-toe-React",
   "name": "tic-tac-toe",
   "version": "0.1.0",
   "private": true,
